@@ -1,1 +1,6 @@
 
+Рабочий jar-файл - GradleJavaFXTest4.jar
+
+Чтобы запустить jar-файл, нужно прописать следующее:
+
+java --module-path <путь до библиотеки javaFX, установленной на компьютере, без скобок> --add-modules javafx.controls,javafx.fxml -jar GradleJavaFXTest4.jar
